NEXT RELEASE (Change that when releasing)
----------------
Make licence explicit: it is GPLv3 as per the conditions of the source
    code dump from Epsitec.
Fix URL of colobot repository.
Render README for Markdown.

----------------
2012-10-05

Release for Colobot Gold pre-alpha
Updated scene files to ones from colobot-level repository
Fixed incorrectly converted relief files

----------------
2012-09-22

Updated level files (resource paths and extensions)

----------------
2012-09-13

Added models converted to new text format
Added translation files
Removed unused files

----------------
2012-08-03

Added fonts
Changed other texture names to lowercase

----------------
2012-07-27

Changed indexed and grayscale PNG images to RGB

----------------
2012-07-22

Initial release made from files from original package by Epsitec
Minor changes:
- some files were not copied, as unnecessary, or dubious
- changed file names to lowercase
- changed all texture and image formats to PNG